WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
249190
Fix WASM SIMD unreachable parsing
https://bugs.webkit.org/show_bug.cgi?id=249190
Summary
Fix WASM SIMD unreachable parsing
Justin Michaud
Reported
2022-12-12 16:23:46 PST
Fix WASM SIMD unreachable parsing
Attachments
Add attachment
proposed patch, testcase, etc.
Justin Michaud
Comment 1
2022-12-12 16:23:57 PST
<
rdar://problem/103257463
>
Justin Michaud
Comment 2
2022-12-12 16:27:52 PST
Pull request:
https://github.com/WebKit/WebKit/pull/7522
EWS
Comment 3
2022-12-13 13:55:23 PST
Committed
257812@main
(2b1711fcb7c7): <
https://commits.webkit.org/257812@main
> Reviewed commits have been landed. Closing PR #7522 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug