Fix WASM SIMD unreachable parsing. https://bugs.webkit.org/show_bug.cgi?id=249190

Reviewed by Mark Lam.

The LLInt is responsible for validating SIMD modules. We do a really
strange (and totally incorrect) kind of lax validation for unreachable
code ostensibly to improve performance. For regular ops, this means we
do not do any pushing or popping from the stack.

This patch makes SIMD code act the same way, so that once we enter
reachable code again, the state of our expression stack is reasonable.

* JSTests/wasm/stress/simd-unreachable.js: Added.
(async test):
* Source/JavaScriptCore/wasm/WasmFunctionParser.h:
(JSC::Wasm::FunctionParser<Context>::simd):
(JSC::Wasm::FunctionParser<Context>::parseExpression):

Canonical link: https://commits.webkit.org/257812@main