Source/JavaScriptCore/wasm/WasmFunctionParser.h
@@ -611,6 +611,7 @@ auto FunctionParser<Context>::simd(SIMDLaneOperation op, SIMDLane lane, SIMDSign
     m_context.notifyFunctionUsesSIMD();
 
     auto pushUnreachable = [&](auto type) -> PartialResult {
+        ASSERT(isReachable);
         // Appease generators without SIMD support.
         m_expressionStack.constructAndAppend(type, m_context.addConstant(Types::F64, 0));
         return { };
@@ -665,6 +666,10 @@ auto FunctionParser<Context>::simd(SIMDLaneOperation op, SIMDLane lane, SIMDSign
         WASM_PARSER_FAIL_IF(!parseVarUInt32(offset), "can't get simd memory op offset");
 
         WASM_VALIDATOR_FAIL_IF(alignment > maxAlignment, "alignment: ", alignment, " can't be larger than max alignment for simd operation: ", maxAlignment);
+
+        if constexpr (!isReachable)
+            return { };
+
         WASM_TRY_POP_EXPRESSION_STACK_INTO(pointer, "simd memory op pointer");
         WASM_VALIDATOR_FAIL_IF(!pointer.type().isI32(), "pointer must be i32");
 
@@ -677,7 +682,11 @@ auto FunctionParser<Context>::simd(SIMDLaneOperation op, SIMDLane lane, SIMDSign
         ASSERT(lane == SIMDLane::v128);
         ASSERT(signMode == SIMDSignMode::None);
         WASM_PARSER_FAIL_IF(!parseImmByteArray16(constant), "can't parse 128-bit vector constant");
-        if constexpr (isReachable) {
+
+        if constexpr (!isReachable)
+            return { };
+
+        if constexpr (Context::tierSupportsSIMD) {
             m_expressionStack.constructAndAppend(Types::V128, m_context.addConstant(constant));
             return { };
         } else
@@ -685,6 +694,9 @@ auto FunctionParser<Context>::simd(SIMDLaneOperation op, SIMDLane lane, SIMDSign
     }
     case SIMDLaneOperation::Splat: {
         ASSERT(signMode == SIMDSignMode::None);
+
+        if constexpr (!isReachable)
+            return { };
 
         TypedExpression scalar;
         WASM_TRY_POP_EXPRESSION_STACK_INTO(scalar, "select condition");
@@ -709,7 +721,7 @@ auto FunctionParser<Context>::simd(SIMDLaneOperation op, SIMDLane lane, SIMDSign
         }
         WASM_VALIDATOR_FAIL_IF(!okType, "Wrong type to SIMD splat");
 
-        if constexpr (isReachable) {
+        if constexpr (Context::tierSupportsSIMD) {
             ExpressionType result;
             WASM_TRY_ADD_TO_CONTEXT(addSIMDSplat(lane, scalar, result));
             m_expressionStack.constructAndAppend(Types::V128, result);
@@ -719,6 +731,9 @@ auto FunctionParser<Context>::simd(SIMDLaneOperation op, SIMDLane lane, SIMDSign
     }
     case SIMDLaneOperation::Shr:
     case SIMDLaneOperation::Shl: {
+        if constexpr (!isReachable)
+            return { };
+
         TypedExpression vector;
         TypedExpression shift;
         WASM_TRY_POP_EXPRESSION_STACK_INTO(shift, "shift i32");
@@ -726,7 +741,7 @@ auto FunctionParser<Context>::simd(SIMDLaneOperation op, SIMDLane lane, SIMDSign
         WASM_VALIDATOR_FAIL_IF(!vector.type().isV128(), "Shift vector must be v128");
         WASM_VALIDATOR_FAIL_IF(!shift.type().isI32(), "Shift amount must be i32");
 
-        if constexpr (isReachable) {
+        if constexpr (Context::tierSupportsSIMD) {
             ExpressionType result;
             WASM_TRY_ADD_TO_CONTEXT(addSIMDShift(op, SIMDInfo { lane, signMode }, vector, shift, result));
             m_expressionStack.constructAndAppend(Types::V128, result);
@@ -737,6 +752,9 @@ auto FunctionParser<Context>::simd(SIMDLaneOperation op, SIMDLane lane, SIMDSign
     }
     case SIMDLaneOperation::ExtmulLow:
     case SIMDLaneOperation::ExtmulHigh: {
+        if constexpr (!isReachable)
+            return { };
+
         TypedExpression lhs;
         TypedExpression rhs;
         WASM_TRY_POP_EXPRESSION_STACK_INTO(rhs, "rhs");
@@ -744,7 +762,7 @@ auto FunctionParser<Context>::simd(SIMDLaneOperation op, SIMDLane lane, SIMDSign
         WASM_VALIDATOR_FAIL_IF(!lhs.type().isV128(), "extmul lhs vector must be v128");
         WASM_VALIDATOR_FAIL_IF(!rhs.type().isV128(), "extmul rhs vector must be v128");
 
-        if constexpr (isReachable) {
+        if constexpr (Context::tierSupportsSIMD) {
             ExpressionType result;
             WASM_TRY_ADD_TO_CONTEXT(addSIMDExtmul(op, SIMDInfo { lane, signMode }, lhs, rhs, result));
             m_expressionStack.constructAndAppend(Types::V128, result);
@@ -761,7 +779,10 @@ auto FunctionParser<Context>::simd(SIMDLaneOperation op, SIMDLane lane, SIMDSign
         TypedExpression pointer;
         WASM_FAIL_IF_HELPER_FAILS(parseMemOp(offset, pointer));
 
-        if constexpr (isReachable) {
+        if constexpr (!isReachable)
+            return { };
+
+        if constexpr (Context::tierSupportsSIMD) {
             ExpressionType result;
             if (op == SIMDLaneOperation::Load)
                 WASM_TRY_ADD_TO_CONTEXT(addSIMDLoad(pointer, offset, result));
@@ -774,14 +795,20 @@ auto FunctionParser<Context>::simd(SIMDLaneOperation op, SIMDLane lane, SIMDSign
     }
     case SIMDLaneOperation::Store: {
         TypedExpression val;
-        WASM_TRY_POP_EXPRESSION_STACK_INTO(val, "val");
-        WASM_VALIDATOR_FAIL_IF(!val.type().isV128(), "store vector must be v128");
+
+        if (isReachable) {
+            WASM_TRY_POP_EXPRESSION_STACK_INTO(val, "val");
+            WASM_VALIDATOR_FAIL_IF(!val.type().isV128(), "store vector must be v128");
+        }
 
         uint32_t offset;
         TypedExpression pointer;
         WASM_FAIL_IF_HELPER_FAILS(parseMemOp(offset, pointer));
 
-        if constexpr (isReachable) {
+        if constexpr (!isReachable)
+            return { };
+
+        if constexpr (Context::tierSupportsSIMD) {
             WASM_TRY_ADD_TO_CONTEXT(addSIMDStore(val, pointer, offset));
             return { };
         } else
@@ -810,12 +837,18 @@ auto FunctionParser<Context>::simd(SIMDLaneOperation op, SIMDLane lane, SIMDSign
             }
         })();
 
-        WASM_TRY_POP_EXPRESSION_STACK_INTO(vector, "vector");
-        WASM_VALIDATOR_FAIL_IF(!vector.type().isV128(), "load_lane input must be a vector");
+        if (isReachable) {
+            WASM_TRY_POP_EXPRESSION_STACK_INTO(vector, "vector");
+            WASM_VALIDATOR_FAIL_IF(!vector.type().isV128(), "load_lane input must be a vector");
+        }
+
         WASM_FAIL_IF_HELPER_FAILS(parseMemOp(offset, pointer));
         WASM_FAIL_IF_HELPER_FAILS(parseImmLaneIdx(laneCount, laneIndex));
 
-        if constexpr (isReachable) {
+        if constexpr (!isReachable)
+            return { };
+
+        if constexpr (Context::tierSupportsSIMD) {
             ExpressionType result;
             WASM_TRY_ADD_TO_CONTEXT(addSIMDLoadLane(op, pointer, vector, offset, laneIndex, result));
             m_expressionStack.constructAndAppend(Types::V128, result);
@@ -846,12 +879,18 @@ auto FunctionParser<Context>::simd(SIMDLaneOperation op, SIMDLane lane, SIMDSign
             }
         })();
 
-        WASM_TRY_POP_EXPRESSION_STACK_INTO(vector, "vector");
-        WASM_VALIDATOR_FAIL_IF(!vector.type().isV128(), "store_lane input must be a vector");
+        if (isReachable) {
+            WASM_TRY_POP_EXPRESSION_STACK_INTO(vector, "vector");
+            WASM_VALIDATOR_FAIL_IF(!vector.type().isV128(), "store_lane input must be a vector");
+        }
+
         WASM_FAIL_IF_HELPER_FAILS(parseMemOp(offset, pointer));
         WASM_FAIL_IF_HELPER_FAILS(parseImmLaneIdx(laneCount, laneIndex));
 
-        if constexpr (isReachable) {
+        if constexpr (!isReachable)
+            return { };
+
+        if constexpr (Context::tierSupportsSIMD) {
             WASM_TRY_ADD_TO_CONTEXT(addSIMDStoreLane(op, pointer, vector, offset, laneIndex));
             return { };
         } else
@@ -868,7 +907,10 @@ auto FunctionParser<Context>::simd(SIMDLaneOperation op, SIMDLane lane, SIMDSign
 
         WASM_FAIL_IF_HELPER_FAILS(parseMemOp(offset, pointer));
 
-        if constexpr (isReachable) {
+        if constexpr (!isReachable)
+            return { };
+
+        if constexpr (Context::tierSupportsSIMD) {
             ExpressionType result;
             WASM_TRY_ADD_TO_CONTEXT(addSIMDLoadExtend(op, pointer, offset, result));
             m_expressionStack.constructAndAppend(Types::V128, result);
@@ -883,7 +925,10 @@ auto FunctionParser<Context>::simd(SIMDLaneOperation op, SIMDLane lane, SIMDSign
 
         WASM_FAIL_IF_HELPER_FAILS(parseMemOp(offset, pointer));
 
-        if constexpr (isReachable) {
+        if constexpr (!isReachable)
+            return { };
+
+        if constexpr (Context::tierSupportsSIMD) {
             ExpressionType result;
             WASM_TRY_ADD_TO_CONTEXT(addSIMDLoadPad(op, pointer, offset, result));
             m_expressionStack.constructAndAppend(Types::V128, result);
@@ -897,15 +942,18 @@ auto FunctionParser<Context>::simd(SIMDLaneOperation op, SIMDLane lane, SIMDSign
         TypedExpression b;
 
         WASM_PARSER_FAIL_IF(!parseImmByteArray16(imm), "can't parse 128-bit shuffle immediate");
+        for (auto i = 0; i < 16; ++i)
+            WASM_PARSER_FAIL_IF(imm.u8x16[i] >= 2 * elementCount(lane));
+
+        if constexpr (!isReachable)
+            return { };
+
         WASM_TRY_POP_EXPRESSION_STACK_INTO(b, "vector argument");
         WASM_VALIDATOR_FAIL_IF(!b.type().isV128(), "shuffle input must be a vector");
         WASM_TRY_POP_EXPRESSION_STACK_INTO(a, "vector argument");
         WASM_VALIDATOR_FAIL_IF(!a.type().isV128(), "shuffle input must be a vector");
 
-        for (auto i = 0; i < 16; ++i)
-            WASM_PARSER_FAIL_IF(imm.u8x16[i] >= 2 * elementCount(lane));
-
-        if constexpr (isReachable) {
+        if constexpr (Context::tierSupportsSIMD) {
             ExpressionType result;
             WASM_TRY_ADD_TO_CONTEXT(addSIMDShuffle(imm, a, b, result));
             m_expressionStack.constructAndAppend(Types::V128, result);
@@ -917,10 +965,14 @@ auto FunctionParser<Context>::simd(SIMDLaneOperation op, SIMDLane lane, SIMDSign
         uint8_t laneIdx;
         TypedExpression v;
         WASM_FAIL_IF_HELPER_FAILS(parseImmLaneIdx(elementCount(lane), laneIdx));
+
+        if constexpr (!isReachable)
+            return { };
+
         WASM_TRY_POP_EXPRESSION_STACK_INTO(v, "vector argument");
         WASM_VALIDATOR_FAIL_IF(v.type() != Types::V128, "type mismatch for argument 0");
 
-        if constexpr (isReachable) {
+        if constexpr (Context::tierSupportsSIMD) {
             ExpressionType result;
             WASM_TRY_ADD_TO_CONTEXT(addExtractLane(SIMDInfo { lane, signMode }, laneIdx, v, result));
             m_expressionStack.constructAndAppend(simdScalarType(lane), result);
@@ -933,12 +985,16 @@ auto FunctionParser<Context>::simd(SIMDLaneOperation op, SIMDLane lane, SIMDSign
         TypedExpression v;
         TypedExpression s;
         WASM_FAIL_IF_HELPER_FAILS(parseImmLaneIdx(elementCount(lane), laneIdx));
+
+        if constexpr (!isReachable)
+            return { };
+
         WASM_TRY_POP_EXPRESSION_STACK_INTO(s, "scalar argument");
         WASM_TRY_POP_EXPRESSION_STACK_INTO(v, "vector argument");
         WASM_VALIDATOR_FAIL_IF(v.type() != Types::V128, "type mismatch for argument 1");
         WASM_VALIDATOR_FAIL_IF(s.type() != simdScalarType(lane), "type mismatch for argument 0");
 
-        if constexpr (isReachable) {
+        if constexpr (Context::tierSupportsSIMD) {
             ExpressionType result;
             WASM_TRY_ADD_TO_CONTEXT(addReplaceLane(SIMDInfo { lane, signMode }, laneIdx, v, s, result));
             m_expressionStack.constructAndAppend(Types::V128, result);
@@ -949,11 +1005,14 @@ auto FunctionParser<Context>::simd(SIMDLaneOperation op, SIMDLane lane, SIMDSign
     case SIMDLaneOperation::Bitmask:
     case SIMDLaneOperation::AnyTrue:
     case SIMDLaneOperation::AllTrue: {
+        if constexpr (!isReachable)
+            return { };
+
         TypedExpression v;
         WASM_TRY_POP_EXPRESSION_STACK_INTO(v, "vector argument");
         WASM_VALIDATOR_FAIL_IF(v.type() != Types::V128, "type mismatch for argument 0");
 
-        if constexpr (isReachable) {
+        if constexpr (Context::tierSupportsSIMD) {
             ExpressionType result;
             WASM_TRY_ADD_TO_CONTEXT(addSIMDI_V(op, SIMDInfo { lane, signMode }, v, result));
             m_expressionStack.constructAndAppend(Types::I32, result);
@@ -978,11 +1037,14 @@ auto FunctionParser<Context>::simd(SIMDLaneOperation op, SIMDLane lane, SIMDSign
     case SIMDLaneOperation::Trunc:
     case SIMDLaneOperation::Nearest:
     case SIMDLaneOperation::Sqrt: {
+        if constexpr (!isReachable)
+            return { };
+
         TypedExpression v;
         WASM_TRY_POP_EXPRESSION_STACK_INTO(v, "vector argument");
         WASM_VALIDATOR_FAIL_IF(v.type() != Types::V128, "type mismatch for argument 0");
 
-        if constexpr (isReachable) {
+        if constexpr (Context::tierSupportsSIMD) {
             ExpressionType result;
             WASM_TRY_ADD_TO_CONTEXT(addSIMDV_V(op, SIMDInfo { lane, signMode }, v, result));
             m_expressionStack.constructAndAppend(Types::V128, result);
@@ -991,6 +1053,9 @@ auto FunctionParser<Context>::simd(SIMDLaneOperation op, SIMDLane lane, SIMDSign
             return pushUnreachable(Types::V128);
     }
     case SIMDLaneOperation::BitwiseSelect: {
+        if constexpr (!isReachable)
+            return { };
+
         TypedExpression v1;
         TypedExpression v2;
         TypedExpression c;
@@ -1001,7 +1066,7 @@ auto FunctionParser<Context>::simd(SIMDLaneOperation op, SIMDLane lane, SIMDSign
         WASM_VALIDATOR_FAIL_IF(v2.type() != Types::V128, "type mismatch for argument 1");
         WASM_VALIDATOR_FAIL_IF(c.type() != Types::V128, "type mismatch for argument 0");
 
-        if constexpr (isReachable) {
+        if constexpr (Context::tierSupportsSIMD) {
             ExpressionType result;
             WASM_TRY_ADD_TO_CONTEXT(addSIMDBitwiseSelect(v1, v2, c, result));
             m_expressionStack.constructAndAppend(Types::V128, result);
@@ -1013,6 +1078,9 @@ auto FunctionParser<Context>::simd(SIMDLaneOperation op, SIMDLane lane, SIMDSign
     case SIMDLaneOperation::GreaterThanOrEqual:
     case SIMDLaneOperation::LessThan:
     case SIMDLaneOperation::LessThanOrEqual: {
+        if constexpr (!isReachable)
+            return { };
+
         TypedExpression rhs;
         TypedExpression lhs;
         WASM_TRY_POP_EXPRESSION_STACK_INTO(rhs, "vector argument");
@@ -1020,7 +1088,7 @@ auto FunctionParser<Context>::simd(SIMDLaneOperation op, SIMDLane lane, SIMDSign
         WASM_VALIDATOR_FAIL_IF(lhs.type() != Types::V128, "type mismatch for argument 1");
         WASM_VALIDATOR_FAIL_IF(rhs.type() != Types::V128, "type mismatch for argument 0");
 
-        if constexpr (isReachable) {
+        if constexpr (Context::tierSupportsSIMD) {
             ExpressionType result;
             WASM_TRY_ADD_TO_CONTEXT(addSIMDRelOp(op, SIMDInfo { lane, signMode }, lhs, rhs, optionalRelation, result));
             m_expressionStack.constructAndAppend(Types::V128, result);
@@ -1030,6 +1098,9 @@ auto FunctionParser<Context>::simd(SIMDLaneOperation op, SIMDLane lane, SIMDSign
     }
     case SIMDLaneOperation::Equal:
     case SIMDLaneOperation::NotEqual: {
+        if constexpr (!isReachable)
+            return { };
+
         TypedExpression rhs;
         TypedExpression lhs;
         WASM_TRY_POP_EXPRESSION_STACK_INTO(rhs, "vector argument");
@@ -1037,7 +1108,7 @@ auto FunctionParser<Context>::simd(SIMDLaneOperation op, SIMDLane lane, SIMDSign
         WASM_VALIDATOR_FAIL_IF(lhs.type() != Types::V128, "type mismatch for argument 1");
         WASM_VALIDATOR_FAIL_IF(rhs.type() != Types::V128, "type mismatch for argument 0");
 
-        if constexpr (isReachable) {
+        if constexpr (Context::tierSupportsSIMD) {
             ExpressionType result;
             WASM_TRY_ADD_TO_CONTEXT(addSIMDRelOp(op, SIMDInfo { lane, signMode }, lhs, rhs, optionalRelation, result));
             m_expressionStack.constructAndAppend(Types::V128, result);
@@ -1064,6 +1135,9 @@ auto FunctionParser<Context>::simd(SIMDLaneOperation op, SIMDLane lane, SIMDSign
     case SIMDLaneOperation::SubSat:
     case SIMDLaneOperation::Max:
     case SIMDLaneOperation::Min: {
+        if constexpr (!isReachable)
+            return { };
+
         TypedExpression a;
         TypedExpression b;
         WASM_TRY_POP_EXPRESSION_STACK_INTO(b, "vector argument");
@@ -1071,7 +1145,7 @@ auto FunctionParser<Context>::simd(SIMDLaneOperation op, SIMDLane lane, SIMDSign
         WASM_VALIDATOR_FAIL_IF(a.type() != Types::V128, "type mismatch for argument 1");
         WASM_VALIDATOR_FAIL_IF(b.type() != Types::V128, "type mismatch for argument 0");
 
-        if constexpr (isReachable) {
+        if constexpr (Context::tierSupportsSIMD) {
             ExpressionType result;
             WASM_TRY_ADD_TO_CONTEXT(addSIMDV_VV(op, SIMDInfo { lane, signMode }, a, b, result));
             m_expressionStack.constructAndAppend(Types::V128, result);
@@ -1990,11 +2064,11 @@ FOR_EACH_WASM_MEMORY_STORE_OP(CREATE_CASE)
     case SetGlobal: {
         uint32_t index;
         WASM_FAIL_IF_HELPER_FAILS(parseIndexForGlobal(index));
+        WASM_VALIDATOR_FAIL_IF(index >= m_info.globals.size(), "set_global ", index, " of unknown global, limit is ", m_info.globals.size());
+        WASM_VALIDATOR_FAIL_IF(m_info.globals[index].mutability == Mutability::Immutable, "set_global ", index, " is immutable");
 
         TypedExpression value;
         WASM_TRY_POP_EXPRESSION_STACK_INTO(value, "set_global value");
-        WASM_VALIDATOR_FAIL_IF(index >= m_info.globals.size(), "set_global ", index, " of unknown global, limit is ", m_info.globals.size());
-        WASM_VALIDATOR_FAIL_IF(m_info.globals[index].mutability == Mutability::Immutable, "set_global ", index, " is immutable");
 
         Type globalType = m_info.globals[index].type;
         ASSERT(isValueType(globalType));
@@ -2459,12 +2533,14 @@ FOR_EACH_WASM_MEMORY_STORE_OP(CREATE_CASE)
         uint8_t simdOp;
         WASM_PARSER_FAIL_IF(!parseUInt8(simdOp), "can't parse wasm extended opcode");
 
+        constexpr bool isReachable = true;
+
         ExtSIMDOpType op = static_cast<ExtSIMDOpType>(simdOp);
         switch (op) {
-        #define CREATE_SIMD_CASE(name, _, laneOp, lane, signMode) case ExtSIMDOpType::name: return simd<Context::tierSupportsSIMD>(SIMDLaneOperation::laneOp, lane, signMode);
+        #define CREATE_SIMD_CASE(name, _, laneOp, lane, signMode) case ExtSIMDOpType::name: return simd<isReachable>(SIMDLaneOperation::laneOp, lane, signMode);
         FOR_EACH_WASM_EXT_SIMD_GENERAL_OP(CREATE_SIMD_CASE)
         #undef CREATE_SIMD_CASE
-        #define CREATE_SIMD_CASE(name, _, laneOp, lane, signMode, relArg) case ExtSIMDOpType::name: return simd<Context::tierSupportsSIMD>(SIMDLaneOperation::laneOp, lane, signMode, relArg);
+        #define CREATE_SIMD_CASE(name, _, laneOp, lane, signMode, relArg) case ExtSIMDOpType::name: return simd<isReachable>(SIMDLaneOperation::laneOp, lane, signMode, relArg);
         FOR_EACH_WASM_EXT_SIMD_REL_OP(CREATE_SIMD_CASE)
         #undef CREATE_SIMD_CASE
         default:
@@ -2888,12 +2964,14 @@ auto FunctionParser<Context>::parseUnreachableExpression() -> PartialResult
         uint8_t simdOp;
         WASM_PARSER_FAIL_IF(!parseUInt8(simdOp), "can't parse wasm extended opcode");
 
+        constexpr bool isReachable = false;
+
         ExtSIMDOpType op = static_cast<ExtSIMDOpType>(simdOp);
         switch (op) {
-        #define CREATE_SIMD_CASE(name, _, laneOp, lane, signMode) case ExtSIMDOpType::name: return simd<false>(SIMDLaneOperation::laneOp, lane, signMode);
+        #define CREATE_SIMD_CASE(name, _, laneOp, lane, signMode) case ExtSIMDOpType::name: return simd<isReachable>(SIMDLaneOperation::laneOp, lane, signMode);
         FOR_EACH_WASM_EXT_SIMD_GENERAL_OP(CREATE_SIMD_CASE)
         #undef CREATE_SIMD_CASE
-        #define CREATE_SIMD_CASE(name, _, laneOp, lane, signMode, relArg) case ExtSIMDOpType::name: return simd<false>(SIMDLaneOperation::laneOp, lane, signMode, relArg);
+        #define CREATE_SIMD_CASE(name, _, laneOp, lane, signMode, relArg) case ExtSIMDOpType::name: return simd<isReachable>(SIMDLaneOperation::laneOp, lane, signMode, relArg);
         FOR_EACH_WASM_EXT_SIMD_REL_OP(CREATE_SIMD_CASE)
         #undef CREATE_SIMD_CASE
         default:
